[metadata]
name = cs
version = 3.1.0
url = https://github.com/exoscale/cs
author = Bruno Renié
description = A simple yet powerful CloudStack API client for Python and the command-line.
long_description = file: README.rst
license = BSD
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    pytz
    requests
setup_requires =
    pytest-runner
tests_require =
    aiohttp
    pytest-cache
    pytest-cov
    pytest

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    cs = cs:main

[options.extras_require]
async =
    aiohttp
highlight =
    pygments

[aliases]
test = pytest

[wheel]
universal = 1

[tool:pytest]
addopts = --cov=cs --cov-report=term-missing cs tests.py

[check-manifest]
ignore =
    tox.ini
    tests.py

[isort]
style = pep8
